# ytsum

./: .env.template  .gitignore  .pre-commit-config.yaml  .pyre_configuration  README.md  function_app.py  local.settings.json.template  pyproject.toml
.github/workflows/: azure-deploy.yml
deploy/azure/: bootstrap.sh  main.bicep
src/ytsum/: alignment.py  config.py  enhancement.py  models.py  utils.py  video.py  youtube.py
src/ytsum/faas/: __init__.py
src/ytsum/faas/azure/: __init__.py  transcript_processor.py  video_download.py  video_processor.py
src/ytsum/faas/azure/helpers/: frame_extraction.py
src/ytsum/llms/: common.py  openai.py
src/ytsum/repositories/: video.py
src/ytsum/scene_detection/: adaptive.py  common.py  eval.py  ssim.py
src/ytsum/storage/: azure.py  common.py  local_disk.py  repositories.py
src/ytsum/transcription/: formatter.py  formatter_v2.py  parsers.py  topics.py
src/ytsum/transcription/segmentation/: common.py  llm.py
tests/unit/: test_hello.py
tools/: detect_scenes.py  extract_images.py  format_transcripts.py  segment_video.py
