[project]
name = "ytsum"
version = "0.1.0"
description = "YouTube Summarizing app"
authors = [
    {name = "Omar Ali Sheikh", email = "sheikhomar@users.noreply.github.com"},
]
dependencies = [
    "azure-functions>=1.20.0",
    "opencv-python>=4.10.0.84",
    "numpy>=2.0.1",
    "scikit-image>=0.24.0",
    "tqdm>=4.66.4",
    "requests>=2.32.3",
    "yt-dlp>=2024.7.16",
    "azure-storage-blob>=12.21.0",
    "webvtt-py>=0.5.1",
    "pydantic>=2.8.2",
    "anyio>=4.4.0",
    "instructor>=1.3.6",
    "openai>=1.37.0",
    "pydantic-settings>=2.3.4",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.1",
    "pyre-check>=0.9.22",
    "pytest>=8.3.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
tests = "pytest -vv -s tests"
extract-images = "python -m tools.extract_images"